- (WIP) event-driven architecture refactor - reviewed catalog load in registration form

--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/register.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/register.html
@@ -75,7 +75,7 @@
                     <div class="timetable"></div>
 
                     <hr class="mb-4">
-                    <button class="btn btn-primary btn-lg btn-block" type="submit">Enviar</button>
+                    <button type="submit" id="sendButton" class="btn btn-primary btn-lg btn-block">Enviar</button>
                 </form>
             </div>
         </div>
