- (WIP) event-driven architecture refactor - (WIP) update worker status

--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
@@ -128,7 +128,7 @@
                     <form id="schedulesForm" novalidate="novalidate" action="/demo/schedules" method="POST">
                         <div class="form-row align-items-center">
                             <span class="lead text-left col-md-7">Actualizar estado trabajadores</span>
-                            <button id="updateWorkersStatus" type="button" class="btn btn-sm btn-success col-md-1 schedule-button" data-schedule="updateWorkersStatus" disabled="disabled"><i class="fas fa-play"></i></button>
+                            <button id="updateWorkersStatus" type="button" class="btn btn-sm btn-success col-md-1 schedule-button" data-schedule="updateWorkersStatus"><i class="fas fa-play"></i></button>
                             <small class="text-left col-md-4 pl-2 schedule-duration"></small>
                         </div>
                         <div class="form-row mt-2 align-items-center">
@@ -139,14 +139,6 @@
                         <div class="form-row mt-2 align-items-center">
                             <span class="lead text-left col-md-7">Limpiar vacaciones pasadas de trabajadores</span>
                             <button id="cleanPastWorkersHolidays" type="button" class="btn btn-sm btn-success col-md-1 schedule-button" data-schedule="cleanPastWorkersHolidays"><i class="fas fa-play"></i></button>
-                            <small class="text-left col-md-4 pl-2 schedule-duration"></small>
-                        </div>
-
-                        <hr>
-
-                        <div class="form-row mt-2 align-items-center">
-                            <span class="lead text-left col-md-7">Update workers holidays test</span>
-                            <button id="updateWorkersHolidaysTest" type="button" class="btn btn-sm btn-success col-md-1" data-schedule="updateWorkersHoliday"><i class="fas fa-play"></i></button>
                             <small class="text-left col-md-4 pl-2 schedule-duration"></small>
                         </div>
                     </form>
