- (WIP) event-driven architecture refactor - (WIP) update password

--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="../components/timehammer-loading.css" />
-    <link rel="stylesheet" href="../components/timehammer-timetable.css" />
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="updatePassword.css" />
 
-    <title>Timehammer: Registro</title>
+    <title>Timehammer: Actualización de contraseña</title>
 </head>
 <body class="bg-light">
     <div id="loading"></div>
@@ -18,35 +17,20 @@
     <div class="container">
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-            <h2>¡Bienvenido a Timehammer!</h2>
-            <p class="lead">En esta página podrás registrarte en Timehammer y así podrás olvidarte del engorro de fichar.</p>
+            <h2>Actualización de contraseña</h2>
+            <p class="lead">En esta página podrás restablecer tu contraseña y así podrás volver a olvidarte del engorro de fichar.</p>
 
-            <h3>¿Cómo funciona esto?</h3>
+            <h3>¿Por qué tengo que restablecer mi contraseña?</h3>
             <p class="lead">Pendiente de redactar</p>
         </div>
 
         <div class="row justify-content-center">
             <div class="col-md-10">
-                <h4 class="mb-3">Formulario de registro</h4>
-                <form class="needs-validation" novalidate="novalidate" action="register" method="POST">
-                    <input type="hidden" id="registrationRequestId" name="registrationRequestId" value="" />
+                <h4 class="mb-3">Formulario de actualización de contraseña</h4>
+                <form class="needs-validation" novalidate="novalidate" action="updatePassword" method="POST">
+                    <input type="hidden" id="workerInternalId" name="workerInternalId" value="" />
 
                     <div class="row">
-                        <div class="col-md-12 mb-3">
-                            <label for="companyCode">Empresa (*)</label>
-                            <select class="form-control custom-select custom-select-sm d-block w-100" id="companyCode" name="companyCode" aria-describedby="companyHelp">
-                            </select>
-                            <small id="companyHelp" class="form-text text-muted">Necesitamos saber la compañía en la que trabajas para poder autenticarte</small>
-                            <div id="companyInvalidFeedback" class="invalid-feedback"></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="workerExternalId">Usuario (*)</label>
-                            <input type="text" class="form-control form-control-sm" id="workerExternalId" name="workerExternalId" autocomplete="username" placeholder="" value="" aria-describedby="workerExternalIdHelp">
-                            <small id="workerExternalIdHelp" class="form-text text-muted">El mismo usuario que en tu empresa.</small>
-                            <div id="workerExternalIdInvalidFeedback" class="invalid-feedback"></div>
-                        </div>
                         <div class="col-md-6 mb-3">
                             <label for="workerExternalPassword">Contraseña (*)</label>
                             <input type="password" class="form-control form-control-sm" id="workerExternalPassword" name="workerExternalPassword" autocomplete="new-password" placeholder="" value="" aria-describedby="workerExternalPasswordHelp">
@@ -55,27 +39,8 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="workCity">Ciudad de trabajo (*)</label>
-                            <select class="form-control custom-select custom-select-sm d-block w-100" id="workCity" name="workCity" aria-describedby="workCityHelp">
-                            </select>
-                            <small id="workCityHelp" class="form-text text-muted">Necesitamos saber tu ciudad de trabajo para saber los días festivos y así no molestarte en esos días</small>
-                            <div id="workCityInvalidFeedback" class="invalid-feedback"></div>
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="workSsid">SSID de la WiFi del trabajo</label>
-                            <input type="text" class="form-control form-control-sm" id="workSsid" name="workSsid" value="" placeholder="" aria-describedby="workSsidHelp">
-                            <small id="workSsidHelp" class="form-text text-muted">Necesario si se quiere automatizar el proceso de fichaje</small>
-                            <div id="invalidFeedbackWorkSsid" class="invalid-feedback"></div>
-                        </div>
-                    </div>
                     <hr class="mb-4">
-
-                    <div class="timetable"></div>
-
-                    <hr class="mb-4">
-                    <button type="submit" id="sendButton" class="btn btn-primary btn-lg btn-block">Enviar</button>
+                    <button type="submit" id="sendButton" class="btn btn-primary btn-lg btn-block">Actualizar</button>
                 </form>
             </div>
         </div>
@@ -112,7 +77,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js" integrity="sha256-Z639rJO57BiZzQDlWsGyF+EJ3Fs3nD4pQPkfimTy3S8=" crossorigin="anonymous"></script>
 
     <script src="../components/timehammer-loading.js"></script>
-    <script src="../components/timehammer-timetable.js"></script>
-    <script src="register.js"></script>
+    <script src="updatePassword.js"></script>
 </body>
 </html>
