--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePasswordSuccessful.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePasswordSuccessful.html
@@ -6,23 +6,18 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 
-    <title>Timehammer: No Autorizado!</title>
+    <title>Timehammer: Actualización de contraseña satisfactoria!</title>
 </head>
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
-            <h2>ERROR 403</h2>
-            <p class="lead">Acceso denegado</p>
+            <h2>¡Actualización de contraseña satisfactoria!</h2>
+            <p class="lead">Ahora ya puedes volver a olvidarte de los fichajes! Puedes continuar en <a href="https://telegram.me/TimeHammerBot">Telegram</a></p>
         </div>
     </div>
 
-    <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap prerequisite: required for dropdowns -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha256-/ijcOLwFf26xEYAjW75FizKVo5tnTYiQddPZoLUHHZ8=" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha256-OFRAJNoaD8L3Br5lglV7VyLRf0itmoBzWUoM+Sji4/8=" crossorigin="anonymous"></script>
 </body>
 </html>
