--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/error_400.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/error_400.html
@@ -6,13 +6,13 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 
-    <title>Timehammer: No Autorizado!</title>
+    <title>Timehammer: Solicitud inválida!</title>
 </head>
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
-            <h2>ERROR 403</h2>
-            <p class="lead">Acceso denegado</p>
+            <h2>ERROR 404</h2>
+            <p class="lead">Solicitud inválida</p>
         </div>
     </div>
 
