- (WIP) event-driven architecture refactor - update password - multiple fixes

--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
@@ -28,7 +28,7 @@
             <div class="col-md-10">
                 <h4 class="mb-3">Formulario de actualización de contraseña</h4>
                 <form class="needs-validation" novalidate="novalidate" action="updatePassword" method="POST">
-                    <input type="hidden" id="workerInternalId" name="workerInternalId" value="" />
+                    <input type="hidden" id="internalId" name="internalId" value="" />
 
                     <div class="row">
                         <div class="col-md-6 mb-3">
