- (WIP) event-driven architecture refactor - added logo and favicon

--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="icon" type="image/svg+xml" href="../img/favicon.svg">
+    <link rel="alternate icon" href="../img/favicon.ico">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="../components/timehammer-loading.css" />
@@ -16,7 +19,7 @@
 
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+            <img class="d-block mx-auto mb-4" src="../img/logo.svg" alt="" width="500">
             <h2>Actualización de contraseña</h2>
             <p class="lead">En esta página podrás restablecer tu contraseña y así podrás volver a olvidarte del engorro de fichar.</p>
 
@@ -25,13 +28,13 @@
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-md-10">
+            <div class="col-md-8">
                 <h4 class="mb-3">Formulario de actualización de contraseña</h4>
                 <form class="needs-validation" novalidate="novalidate" action="updatePassword" method="POST">
                     <input type="hidden" id="internalId" name="internalId" value="" />
 
                     <div class="row">
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-12 mb-3">
                             <label for="workerExternalPassword">Contraseña (*)</label>
                             <input type="password" class="form-control form-control-sm" id="workerExternalPassword" name="workerExternalPassword" autocomplete="new-password" placeholder="" value="" aria-describedby="workerExternalPasswordHelp">
                             <small id="workerExternalPasswordHelp" class="form-text text-muted">La misma contraseña que en tu empresa. Esta contraseña es necesaria para poder automatizar ciertas acciones.</small>
