--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/register.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/register.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="icon" type="image/svg+xml" href="../img/favicon.svg">
+    <link rel="alternate icon" href="../img/favicon.ico">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="../components/timehammer-loading.css" />
@@ -17,7 +20,7 @@
 
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+            <img class="d-block mx-auto mb-4" src="../img/logo.svg" alt="" width="500">
             <h2>¡Bienvenido a Timehammer!</h2>
             <p class="lead">En esta página podrás registrarte en Timehammer y así podrás olvidarte del engorro de fichar.</p>
 
@@ -44,13 +47,13 @@
                         <div class="col-md-6 mb-3">
                             <label for="workerExternalId">Usuario (*)</label>
                             <input type="text" class="form-control form-control-sm" id="workerExternalId" name="workerExternalId" autocomplete="username" placeholder="" value="" aria-describedby="workerExternalIdHelp">
-                            <small id="workerExternalIdHelp" class="form-text text-muted">El mismo usuario que en tu empresa.</small>
+                            <small id="workerExternalIdHelp" class="form-text text-muted">El mismo usuario que para realizar los fichajes en tu empresa</small>
                             <div id="workerExternalIdInvalidFeedback" class="invalid-feedback"></div>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="workerExternalPassword">Contraseña (*)</label>
                             <input type="password" class="form-control form-control-sm" id="workerExternalPassword" name="workerExternalPassword" autocomplete="new-password" placeholder="" value="" aria-describedby="workerExternalPasswordHelp">
-                            <small id="workerExternalPasswordHelp" class="form-text text-muted">La misma contraseña que en tu empresa. Esta contraseña es necesaria para poder automatizar ciertas acciones.</small>
+                            <small id="workerExternalPasswordHelp" class="form-text text-muted">La misma contraseña que para realizar los fichajes en tu empresa. Esta contraseña es necesaria para poder automatizar ciertas acciones</small>
                             <div id="workerExternalPasswordInvalidFeedback" class="invalid-feedback"></div>
                         </div>
                     </div>
