--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/faq.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/faq.html
@@ -4,12 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="icon" type="image/svg+xml" href="../img/favicon.svg">
+    <link rel="alternate icon" href="../img/favicon.ico">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Timehammer: FAQ</title>
 </head>
 <body class="bg-light">
     <div class="container">
+        <div class="py-5 text-center">
+            <img class="d-block mx-auto mb-4" src="../img/logo.svg" alt="" width="500">
+            <h2>FAQ</h2>
+        </div>
+
         <div class="accordion" id="timehammerFAQ">
             <div class="card">
                 <div class="card-header" id="Q01">
