--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+    <link rel="alternate icon" href="img/favicon.ico">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/ebff2e60d9.js" crossorigin="anonymous"></script>
@@ -13,6 +16,8 @@
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
+            <img class="d-block mx-auto mb-4" src="img/logo.svg" alt="" width="500">
+
             <div class="row justify-content-center">
                 <div class="col-md-10">
                     <h1 class="mb-3">Demo</h1>
