--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/error_403.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/error_403.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="icon" type="image/svg+xml" href="../img/favicon.svg">
-    <link rel="alternate icon" href="../img/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+    <link rel="alternate icon" href="img/favicon.ico">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 
@@ -14,7 +14,7 @@
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="../img/logo.svg" alt="" width="500">
+            <img class="d-block mx-auto mb-4" src="img/logo.svg" alt="" width="500">
             <h2>ERROR 403</h2>
             <p class="lead">Acceso denegado</p>
         </div>
