- (WIP) event-driven architecture refactor - fixed logo size

--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/register.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/register.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="../img/logo.svg" alt="" width="500">
+            <img class="d-block mx-auto mb-4" src="../img/timehammer_title.svg" alt="TimeHammer" width="100%">
             <h2>¡Bienvenido a Timehammer!</h2>
             <p class="lead">En esta página podrás registrarte en Timehammer y así podrás olvidarte del engorro de fichar.</p>
 
