--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/registrationExpired.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/registrationExpired.html
@@ -14,7 +14,7 @@
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="../img/logo.svg" alt="" width="500">
+            <img class="d-block mx-auto mb-4" src="../img/timehammer_title.svg" alt="TimeHammer" width="100%">
             <h2>¡Registro fallido!</h2>
             <p class="lead">La solicitud de registro ha expirado. Tienes 10 minutos para completar el registro. Puede volver a iniciar el registro desde <a href="https://telegram.me/TimeHammerBot">Telegram</a></p>
         </div>
