--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
@@ -16,7 +16,7 @@
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="img/logo.svg" alt="" width="500">
+            <img class="d-block mx-auto mb-4" src="img/timehammer_title.svg" alt="TimeHammer" width="100%">
 
             <div class="row justify-content-center">
                 <div class="col-md-10">
