--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="../img/logo.svg" alt="" width="500">
+            <img class="d-block mx-auto mb-4" src="../img/timehammer_title.svg" alt="TimeHammer" width="100%">
             <h2>Actualización de contraseña</h2>
             <p class="lead">En esta página podrás restablecer tu contraseña y así podrás volver a olvidarte del engorro de fichar.</p>
 
