--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePasswordExpired.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePasswordExpired.html
@@ -14,7 +14,7 @@
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="../img/logo.svg" alt="" width="500">
+            <img class="d-block mx-auto mb-4" src="../img/timehammer_title.svg" alt="TimeHammer" width="100%">
             <h2>¡Actualización de contraseña fallida!</h2>
             <p class="lead">La solicitud de actualización de contraseña ha expirado. Tienes 10 minutos para actualizar la contraseña. Puedes volver a iniciar la actualización desde <a href="https://telegram.me/TimeHammerBot">Telegram</a></p>
         </div>
