--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePasswordSuccessful.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePasswordSuccessful.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="icon" type="image/svg+xml" href="../img/favicon.svg">
+    <link rel="alternate icon" href="../img/favicon.ico">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 
     <title>Timehammer: Actualización de contraseña satisfactoria!</title>
@@ -11,6 +14,7 @@
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
+            <img class="d-block mx-auto mb-4" src="../img/timehammer_title.svg" alt="TimeHammer" width="100%">
             <h2>¡Actualización de contraseña satisfactoria!</h2>
             <p class="lead">Ahora ya puedes volver a olvidarte de los fichajes! Puedes continuar en <a href="https://telegram.me/TimeHammerBot">Telegram</a></p>
         </div>
