--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/error_403.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/error_403.html
@@ -14,7 +14,7 @@
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="img/logo.svg" alt="" width="500">
+            <img class="d-block mx-auto mb-4" src="img/timehammer_title.svg" alt="TimeHammer" width="100%">
             <h2>ERROR 403</h2>
             <p class="lead">Acceso denegado</p>
         </div>
