- added index.html page

--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/register.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/register.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../components/timehammer-timetable.css" />
     <link rel="stylesheet" href="register.css" />
 
-    <title>Timehammer: Registro</title>
+    <title>TimeHammer: Registro</title>
 </head>
 <body class="bg-light">
     <div id="loading"></div>
@@ -21,8 +21,8 @@
     <div class="container">
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="../img/timehammer_title.svg" alt="TimeHammer" width="100%">
-            <h2>¡Bienvenido a Timehammer!</h2>
-            <p class="lead">En esta página podrás registrarte en Timehammer y así podrás olvidarte del engorro de fichar.</p>
+            <h2>¡Bienvenido a TimeHammer!</h2>
+            <p class="lead">En esta página podrás registrarte en TimeHammer y así podrás olvidarte del engorro de fichar.</p>
 
             <h3>¿Cómo funciona esto?</h3>
             <p class="lead">Pendiente de redactar</p>
@@ -84,11 +84,11 @@
         </div>
 
         <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">© 2019-2020 Timehammer</p>
+            <p class="mb-1">© 2019-2020 TimeHammer</p>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Privacy</a></li>
                 <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Support</a></li>
+                <li class="list-inline-item"><a href="mailto:admin@kronostools.com">Contact</a></li>
             </ul>
         </footer>
     </div>
