--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePassword.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../components/timehammer-loading.css" />
     <link rel="stylesheet" href="updatePassword.css" />
 
-    <title>Timehammer: Actualización de contraseña</title>
+    <title>TimeHammer: Actualización de contraseña</title>
 </head>
 <body class="bg-light">
     <div id="loading"></div>
@@ -49,11 +49,11 @@
         </div>
 
         <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">© 2019-2020 Timehammer</p>
+            <p class="mb-1">© 2019-2020 TimeHammer</p>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Privacy</a></li>
                 <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Support</a></li>
+                <li class="list-inline-item"><a href="mailto:admin@kronostools.com">Contact</a></li>
             </ul>
         </footer>
     </div>
