--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePasswordExpired.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/auth/updatePasswordExpired.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 
-    <title>Timehammer: Actualización de contraseña fallida!</title>
+    <title>TimeHammer: Actualización de contraseña fallida!</title>
 </head>
 <body class="bg-light">
     <div class="container">
