--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
@@ -11,7 +11,7 @@
 
     <script src="https://kit.fontawesome.com/ebff2e60d9.js" crossorigin="anonymous"></script>
 
-    <title>Timehammer: Demo</title>
+    <title>TimeHammer: Demo</title>
 </head>
 <body class="bg-light">
     <div class="container">
@@ -181,11 +181,11 @@
         </div>
 
         <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="my-1">© 2019-2020 Timehammer</p>
+            <p class="my-1">© 2019-2020 TimeHammer</p>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Privacy</a></li>
                 <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Support</a></li>
+                <li class="list-inline-item"><a href="mailto:admin@kronostools.com">Contact</a></li>
             </ul>
         </footer>
     </div>
