--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/faq.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/faq.html
@@ -9,13 +9,13 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Timehammer: FAQ</title>
+    <title>TimeHammer: FAQ</title>
 </head>
 <body class="bg-light">
     <div class="container">
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="img/timehammer_title.svg" alt="TimeHammer" width="100%">
-            <h2>FAQ</h2>
+            <h1>FAQ</h1>
         </div>
 
         <div class="accordion" id="timehammerFAQ">
